--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,229 +1,259 @@
+@font-face {
+  font-family: 'Editorial';
+  src: url('/public/fonts/PPEditorialNew-Ultralight.ttf');
+}
+
+@font-face {
+  font-family: 'Mondwest';
+  src: url('/public/fonts/PPMondwest-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Montreal';
+  src: url('/public/fonts/PPNeueMontreal-Book.ttf');
+}
+
+
 .main {
+  background-image: url(/images/background.png);
+  background-repeat: repeat;
+  background-position: top;
+  background-color: #FCFAF7;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  max-width: 60vw;
+  width: 100%;
+  align-items: center;
+  margin: 2rem;
+  font-size: 1.5rem;
+  font-family: PP Mondwest;
+}
+
+.landing {
+  display: flex;
+  margin: 2rem 0 4rem 0;
+  flex-direction: column;
+  gap: 1.5rem;
+  position: relative;
+  left: -10%;
+}
+
+.landingText {
+  font-size: 2rem;
+  letter-spacing: -0.05rem;
+  font-family: PP Neue Montreal;
+}
+
+.rsvpButton {
+  display: inline-block;
+  font-size: 4rem;
+  padding: 0.75rem 1.5rem 0.5rem 1.5rem;
+  width: max-content;
+  border-radius: 5rem;
+  color: #3600CF;
+  border: 1px solid #3600CF;
+  font-family: PP Mondwest;
+}
+
+.bigSundays {
+  display: block;
+}
+
+.atUSC {
+  font-size: 2.5rem;
+  position: absolute;
+  top: 36%;
+  right: 10%;
+  letter-spacing: -0.05rem;
+  font-family: PP Neue Montreal;
+}
+
+
+.scroll {
+  display: flex;
+  margin-top: 2rem;
+}
+
+.scrollList {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  padding: 1em;
+  animation: scroll 15s infinite linear;
+  align-items: center;
+  border-top: 1px solid rgba(54, 0, 207, 0.50);
+  border-bottom: 1px solid rgba(54, 0, 207, 0.50);
+}
+
+.scroll:hover & {
+  animation-play-state: paused;
+}
+
+.scrollItem {
+  white-space: nowrap;
+  color: #3600CF;
+  font-size: 3rem;
+  font-family: PP Editorial New;
+  font-weight: 200;
+
+}
+
+@keyframes scroll {
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10rem 0 10rem 0;
+}
+
+.sectionNum {
+  color: #3600CF;
+  font-family: PP Editorial New;
+  font-size: 5rem;
+  font-style: normal;
+  font-weight: 200;
+  line-height: normal;
+  text-align: center;
+}
+
+
+.sectionTitle {
+  width: 60vw;
+  color: #3600CF;
+  text-align: center;
+  font-family: PP Editorial New;
+  font-size: 5rem;
+  font-style: normal;
+  font-weight: 200;
+  line-height: normal;
+  letter-spacing: -0.125rem;
+}
+
+.leftImage {
+  position: relative;
+  max-width: 50vw;
+  float: left;
+}
+
+.rightImage {
+  position: relative;
+  max-width: 49vw;
+  float: right;
+}
+
+.floatOne {
+  position: absolute;
+  right: 15%;
+  top: 90rem;
+  width: 20rem;
+}
+.floatTwo {
+  position: absolute;
+  left: 8%;
+  top: 190rem;
+  width: 20rem;
+}
+
+.cardSection {
+  width: 95vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  margin: 8rem 0 8rem 0;
+
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+.what {
+  color: #3600CF;
+  font-family: PP Mondwest;
+  font-size: 4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 2rem;
 }
 
 .card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
   display: flex;
+  padding: 2rem 8rem 2rem 2rem;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  align-items: flex-start;
+  gap: 20rem;
+  background: var(--blueberry, #3600CF);
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.cardScroll {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.cardTop {
+  font-family: PP Neue Montreal;
+  font-size: 1.5rem;
+  font-weight: 375;
+  padding: 0.5rem 1rem;
+  border: 1px solid #fff;
+  border-radius: 5rem;
+  color: #fff;
+  text-transform: uppercase;
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.cardBottom {
+  justify-content: start;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.cardTitle {
+  color: #FFF;
+  text-align: left;
+  font-family: PP Mondwest;
+  font-size: 7rem;
+  font-style: normal;
+  font-weight: 400;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.cardDesc {
+  color: #FFF;
+  font-family: PP Neue Montreal;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  max-width: 70%;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.seeAll {
+  text-transform: uppercase;
+  font-family: PP Mondwest;
+  font-size: 4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #fff;
+  background:#3600CF;
+  width: max-content;
+  border-radius: 10rem;
+  padding: 1.1rem 1.3rem 0.9rem 1.3rem;
+  float: right;
 }
