--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,14 +21,14 @@
   background-color: #FCFAF7;
   min-height: 100vh;
   min-width: 100vw;
+  margin: 0;
 }
 .container {
   display: flex;
   flex-direction: column;
-  
+  overflow-x: hidden;
   align-items: center;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0;
 }
 
 .navbar {
